Chapter 10 — Listing 10.5: OrderPricingService.java Demonstrates: stateless service design for inherent thread safety,