@@ -1,9 +1,13 @@
-// Java 8+
+// Java 25+
+// Feature shown: stateless service with records and streams, final in Java 16+
+
 /**
  * Listing 10.5 — OrderPricingService.java
- * Demonstrates: Stateless service design for inherent thread safety
+ * Demonstrates: stateless service design for inherent thread safety,
+ *               using records as immutable data carriers and streams for computation
  * Chapter 10: Concurrency Foundations and Coordination
- * Requires: Java 8+
+ * Requires: Java 25+ (compiled with --enable-preview --release 21 for
+ * the void main() instance main method)
  */
 package chapter10;
 
@@ -16,13 +20,13 @@ import java.util.logging.Logger;
 // Stateless service — no instance fields, inherently thread-safe
 public class OrderPricingService {
 
-    private static final Logger log = Logger.getLogger(
-            OrderPricingService.class.getName());
+    private static final Logger log =
+            Logger.getLogger(OrderPricingService.class.getName());
 
-    // Immutable data carrier for an order line
-    record OrderLine(String product, int quantity, double unitPrice) {}
+    // Immutable record — safe to share across threads
+    record OrderLine(String productId, int quantity, double unitPrice) {}
 
-    // No instance fields — operates purely on method arguments
+    // No shared state — operates only on its arguments
     public double calculateTotal(
             List<OrderLine> lines,
             double discountRate) {
@@ -32,26 +36,25 @@ public class OrderPricingService {
                 .sum() * (1 - discountRate);               // apply discount
     }
 
-    public static void main(String[] args) throws InterruptedException {
-
-        // Single shared service instance — safe for all threads
+    void main() throws InterruptedException {
         OrderPricingService service = new OrderPricingService();
 
-        List<OrderLine> order = List.of(
-                new OrderLine("Widget", 3, 9.99),
-                new OrderLine("Gadget", 1, 49.99),
-                new OrderLine("Doohickey", 2, 14.99)
+        // Immutable order lines — created once, shared freely
+        List<OrderLine> lines = List.of(
+                new OrderLine("PROD-001", 2, 49.99),
+                new OrderLine("PROD-002", 1, 19.99),
+                new OrderLine("PROD-003", 3, 9.99)
         );
 
+        double discountRate = 0.10; // 10 percent discount
+
+        // Multiple threads calling the same stateless service safely
         ExecutorService executor = Executors.newFixedThreadPool(4);
 
-        // Multiple threads invoking the same stateless service concurrently
         for (int i = 0; i < 6; i++) {
-            final int threadId = i;
             executor.submit(() -> {
-                double total = service.calculateTotal(order, 0.10); // 10% off
-                log.info("Thread-" + threadId
-                        + " calculated total: $" + String.format("%.2f", total));
+                double total = service.calculateTotal(lines, discountRate);
+                log.info("Order total after discount: " + total);
             });
         }
 
@@ -59,9 +62,8 @@ public class OrderPricingService {
         executor.awaitTermination(5, TimeUnit.SECONDS);
 
         // Output:
-        // Thread-0 calculated total: $89.91
-        // Thread-1 calculated total: $89.91
-        // Thread-2 calculated total: $89.91
-        // (all threads produce identical results — no coordination needed)
+        // INFO: Order total after discount: 107.982
+        // INFO: Order total after discount: 107.982
+        // (repeated 6 times — consistent result, no coordination needed)
     }
 }
